# scala_torch

./: .gitignore  .gitmodules  .scalafmt.conf  README.md  build.sbt  environment.yml  requirements-dev.txt
.github/workflows/: run_tests.yml
project/: Build.scala  build.properties  plugins.sbt
scala-torch/: build.sbt
scala-torch/src/main/scala/com/microsoft/scalatorch/torch/: Device.scala  Generator.scala  Model.scala  Reduction.scala  ReferenceManager.scala  Scalar.scala  Size.scala  Tensor.scala  Tensor.scala.in  TensorOptions.scala  dtype.scala  package.scala  package.scala.in  syntax.scala
scala-torch/src/main/scala/com/microsoft/scalatorch/torch/fft/: package.scala  package.scala.in
scala-torch/src/main/scala/com/microsoft/scalatorch/torch/init/: package.scala
scala-torch/src/main/scala/com/microsoft/scalatorch/torch/jit/: CompilationUnit.scala  IValue.scala  Module.scala  OpSymbol.scala  Type.scala
scala-torch/src/main/scala/com/microsoft/scalatorch/torch/linalg/: package.scala  package.scala.in
scala-torch/src/main/scala/com/microsoft/scalatorch/torch/nn/functional/: package.scala  package.scala.in
scala-torch/src/main/scala/com/microsoft/scalatorch/torch/nn/init/: package.scala
scala-torch/src/main/scala/com/microsoft/scalatorch/torch/optim/: Optimizer.scala
scala-torch/src/main/scala/com/microsoft/scalatorch/torch/special/: package.scala  package.scala.in
scala-torch/src/main/scala/com/microsoft/scalatorch/torch/util/: Disposer.scala  Implicits.scala  NoGrad.scala  Profiler.scala
scala-torch/src/test/resources/com/microsoft/scalatorch/torch/jit/: simple_trace.py  traced_model.pt
scala-torch/src/test/scala/com/microsoft/scalatorch/torch/: TensorTest.scala  TorchFunctionTest.scala
scala-torch/src/test/scala/com/microsoft/scalatorch/torch/jit/: ModuleTest.scala
scala-torch/src/test/scala/com/microsoft/scalatorch/torch/tutorial/: PyTorchOrgTensorTutorialTest.scala  PytorchOrgPolynomialNetwork.scala  PytorchOrgPolynomialNetworkOptim.scala  TutorialTest.scala
swig/: build.sbt
swig/project/: plugins.sbt
swig/src/main/java/com/microsoft/scalatorch/torch/internal/: Module2.java  Module3.java  Module4.java  NativeLoader.java
swig/src/main/swig/: bindgen.py  generated_bindings.i  generated_tensor_bindings.i  torch_array.i  torch_array_ref.i  torch_data.i  torch_equals_hashcode.i  torch_generator_swig.i  torch_indexing.i  torch_init.i  torch_ir.i  torch_jit_type.i  torch_list.h  torch_optim_swig.i  torch_optional.i  torch_primitives.i  torch_profiler.i  torch_reduction.i  torch_scalar.i  torch_script_swig.i  torch_serialize_swig.i  torch_std_array.i  torch_string_view.i  torch_swig.i  torch_tensor.i  torch_tensor_list.i  torch_variant_enum.i  tuple.i
swig/src/native/: CMakeLists.txt
